chore: update remaining Simple Quran references

--- a/web/privacy-policy.html
+++ b/web/privacy-policy.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Privacy Policy - Simple Quran</title>
+  <title>Privacy Policy - Al-Quran - Simple</title>
   <style>
     * {
       margin: 0;
@@ -99,12 +99,12 @@
     <p class="last-updated">Last updated: November 3, 2025</p>
 
     <p>
-      Simple Quran ("we", "our", or "us") is committed to protecting your privacy. This Privacy Policy explains how we handle information when you use our application.
+      Al-Quran - Simple ("we", "our", or "us") is committed to protecting your privacy. This Privacy Policy explains how we handle information when you use our application.
     </p>
 
     <h2>Information We Collect</h2>
     <p>
-      Simple Quran is designed with your privacy in mind. We do not collect, store, or transmit any personal information or user data. The app operates entirely offline and all data is stored locally on your device.
+      Al-Quran is designed with your privacy in mind. We do not collect, store, or transmit any personal information or user data. The app operates entirely offline and all data is stored locally on your device.
     </p>
 
     <h2>Data Storage</h2>
@@ -121,7 +121,7 @@
 
     <h2>Permissions</h2>
     <p>
-      Simple Quran may request the following permissions:
+      Al-Quran may request the following permissions:
     </p>
     <ul>
       <li><strong>Storage:</strong> To save your preferences and reading progress locally on your device.</li>
@@ -132,7 +132,7 @@
 
     <h2>Third-Party Services</h2>
     <p>
-      Simple Quran does not integrate with any third-party analytics, advertising, or tracking services. We do not use cookies, trackers, or any other technology to monitor your usage of the app.
+      Al-Quran does not integrate with any third-party analytics, advertising, or tracking services. We do not use cookies, trackers, or any other technology to monitor your usage of the app.
     </p>
 
     <h2>Children's Privacy</h2>
